feature: customise tailwind font families, scaffold hero section

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -3,6 +3,7 @@
 @import 'components/__components'
 @import 'core/__core'
 @import 'layouts/__layouts'
+@import 'sections/__sections'
 
 @tailwind base
 @tailwind components
