--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,9 @@
   height: 100vh;
   width: 100vw; }
 
+.nav-link {
+  padding: 0 25px; }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
