--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,11 @@
+.App {
+  width: 85%;
+  margin: 0 auto; }
+
 .hero {
   min-height: 100vh;
   height: 100vh;
-  width: 100vw; }
+  width: 100%; }
 
 .nav-link {
   padding: 0 25px; }
