--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,25 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .avatar {
-  max-width: 50px; }
+  max-width: 50px;
+}
 
 .hero {
   min-height: 100vh;
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+}
 
 .nav-link {
-  padding: 0 25px; }
-  .nav-link.active {
-    @apply font-bold underline underline-offset-4 decoration-2 decoration-blue-600; }
-  .nav-link:hover {
-    @apply bg-slate-100 py-3 rounded-3xl; }
+  padding: 0 25px;
+}
+.nav-link.active {
+  @apply font-bold underline underline-offset-4 decoration-2 decoration-blue-600;
+}
+.nav-link:hover {
+  @apply bg-slate-100 py-3 rounded-3xl;
+}
 
 .nav-link-active {
   padding: 0 25px;
-  @apply font-bold underline underline-offset-4 decoration-4 decoration-blue-600; }
+  @apply font-bold underline underline-offset-4 decoration-4 decoration-blue-600;
+}
 
 .App {
   width: 85%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 @tailwind base;
 @tailwind components;
