--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,34 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .avatar {
-  @apply w-12 h-12;
-}
+  @apply w-12 h-12; }
+
+.primary {
+  @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
+  @apply bg-slate-900 text-white; }
+
+.secondary {
+  @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
+  @apply bg-slate-100 text-slate-700; }
 
 .hero {
   min-height: 100vh;
   height: 100vh;
-  width: 100%;
-}
+  width: 100%; }
 
 .nav-link {
-  padding: 0 25px;
-}
-.nav-link.active {
-  @apply font-bold underline underline-offset-4 decoration-2 decoration-blue-600;
-}
-.nav-link:hover {
-  @apply bg-slate-100 py-3 rounded-3xl;
-}
+  padding: 0 25px; }
+  .nav-link.active {
+    @apply font-bold underline underline-offset-4 decoration-2 decoration-blue-600; }
+  .nav-link:hover {
+    @apply bg-slate-100 py-3 rounded-3xl; }
 
 .nav-link-active {
   padding: 0 25px;
-  @apply font-bold underline underline-offset-4 decoration-4 decoration-blue-600;
-}
+  @apply font-bold underline underline-offset-4 decoration-4 decoration-blue-600; }
 
 .App {
   width: 85%;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 @tailwind base;
 @tailwind components;
