feature: button hover effects

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,10 +6,14 @@
 .primary {
   @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
   @apply bg-slate-900 text-white; }
+  .primary:hover {
+    @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white; }
 
 .secondary {
   @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
   @apply bg-slate-100 text-slate-700; }
+  .secondary:hover {
+    @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white; }
 
 .hero {
   min-height: 100vh;
