--- a/src/styles/components/_button.sass
+++ b/src/styles/components/_button.sass
@@ -1,7 +1,13 @@
 .primary
     @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center
     @apply bg-slate-900 text-white
+    
+    &:hover
+        @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white   
 
 .secondary
     @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center
-    @apply bg-slate-100 text-slate-700
+    @apply bg-slate-100 text-slate-700 
+    
+    &:hover
+        @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white  
