--- a/src/styles/components/_navbar.sass
+++ b/src/styles/components/_navbar.sass
@@ -1,12 +1,9 @@
 .nav-link
     padding: 0 25px
+    @apply text-gray-600
 
     &.active
-        @apply font-bold underline underline-offset-4 decoration-2 decoration-blue-600
+        @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600
 
     &:hover
         @apply bg-slate-100 py-3 rounded-3xl
-
-.nav-link-active
-    padding: 0 25px
-    @apply font-bold underline underline-offset-4 decoration-4 decoration-blue-600
