--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,15 +21,12 @@
   width: 100%; }
 
 .nav-link {
-  padding: 0 25px; }
+  padding: 0 25px;
+  @apply text-gray-600; }
   .nav-link.active {
-    @apply font-bold underline underline-offset-4 decoration-2 decoration-blue-600; }
+    @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600; }
   .nav-link:hover {
     @apply bg-slate-100 py-3 rounded-3xl; }
-
-.nav-link-active {
-  padding: 0 25px;
-  @apply font-bold underline underline-offset-4 decoration-4 decoration-blue-600; }
 
 .App {
   width: 85%;
