fix: font weight in navitems

--- a/src/styles/components/_navbar.sass
+++ b/src/styles/components/_navbar.sass
@@ -1,6 +1,6 @@
 .nav-link
     padding: 0 25px
-    @apply text-gray-600
+    @apply text-gray-600 font-normal
 
     &.active
         @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600
