--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,36 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .avatar {
-  @apply w-12 h-12; }
+  @apply w-12 h-12;
+}
 
 .primary {
   @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
-  @apply bg-slate-900 text-white; }
-  .primary:hover {
-    @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white; }
+  @apply bg-slate-900 text-white;
+}
+.primary:hover {
+  @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white;
+}
 
 .secondary {
   @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
-  @apply bg-slate-100 text-slate-700; }
-  .secondary:hover {
-    @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white; }
+  @apply bg-slate-100 text-slate-700;
+}
+.secondary:hover {
+  @apply ring-2 ring-offset-2 ring-slate-900 ring-offset-white;
+}
 
 .hero {
   min-height: 100vh;
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+}
 
 .nav-link {
   padding: 0 25px;
-  @apply text-gray-600; }
-  .nav-link.active {
-    @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600; }
-  .nav-link:hover {
-    @apply bg-slate-100 py-3 rounded-3xl; }
+  @apply text-gray-600 font-normal;
+}
+.nav-link.active {
+  @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600;
+}
+.nav-link:hover {
+  @apply bg-slate-100 py-3 rounded-3xl;
+}
 
 .App {
   width: 70%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 @tailwind base;
 @tailwind components;
