--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,7 +5,7 @@
 }
 
 .primary {
-  @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
+  @apply py-3 mt-5 rounded-3xl w-52 font-main font-normal text-xl flex items-center place-content-center;
   @apply bg-slate-900 text-white;
 }
 .primary:hover {
@@ -13,7 +13,7 @@
 }
 
 .secondary {
-  @apply py-3 mt-5 rounded-3xl w-52 font-main text-xl flex items-center place-content-center;
+  @apply py-3 mt-5 rounded-3xl w-52 font-main font-normal text-xl flex items-center place-content-center;
   @apply bg-slate-100 text-slate-700;
 }
 .secondary:hover {
