--- a/src/styles/components/_techstack.sass
+++ b/src/styles/components/_techstack.sass
@@ -3,6 +3,15 @@
     height: 100vh
     width: 100%
 
+.tech-stack-table
+    width: 100%
+    @apply mt-10
+    @apply border rounded-2xl shadow-sm
+
 .tech-stack-column
     @apply flex flex-col items-center
-    @apply border
+    @apply py-10 
+
+.tech-stack-icon
+    @apply w-10 h-10
+    @apply text-blue-600
