--- a/src/styles/components/_techstack.sass
+++ b/src/styles/components/_techstack.sass
@@ -6,12 +6,17 @@
 .tech-stack-table
     width: 100%
     @apply mt-10
-    @apply border rounded-2xl shadow-sm
+    @apply border border-gray-200 rounded-2xl shadow-md
 
 .tech-stack-column
     @apply flex flex-col items-center
-    @apply py-10 
+    @apply py-10
+
+    &.bordered 
+        border-left: 1px solid
+        border-right: 1px solid
+        @apply border-gray-200
 
 .tech-stack-icon
-    @apply w-10 h-10
+    @apply w-10 h-10 my-6
     @apply text-blue-600
