feature: finalising the technology stack markup and styling

--- a/src/styles/components/_techstack.sass
+++ b/src/styles/components/_techstack.sass
@@ -4,9 +4,7 @@
     width: 100%
 
 .tech-stack-table
-    width: 100%
-    @apply mt-10
-    @apply border border-gray-200 rounded-2xl shadow-md
+    @apply my-20 border border-gray-200 rounded-2xl shadow-md
 
 .tech-stack-column
     @apply flex flex-col items-center
