--- a/src/styles/components/_techstack.sass
+++ b/src/styles/components/_techstack.sass
@@ -4,7 +4,7 @@
     width: 100%
 
 .tech-stack-table
-    @apply my-20 border border-gray-200 rounded-2xl shadow-md
+    @apply border border-gray-200 rounded-2xl shadow-md
 
 .tech-stack-column
     @apply flex flex-col items-center
