fix: font weight

--- a/src/styles/components/_navbar.sass
+++ b/src/styles/components/_navbar.sass
@@ -3,7 +3,7 @@
     @apply text-gray-600 font-normal
 
     &.active
-        @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600
+        @apply font-medium text-black underline underline-offset-4 decoration-2 decoration-blue-600
 
     &:hover
         @apply bg-slate-100 py-3 rounded-3xl
