--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,7 +29,7 @@
   padding: 0 25px;
   @apply text-gray-600 font-normal; }
   .nav-link.active {
-    @apply font-bold text-black underline underline-offset-4 decoration-2 decoration-blue-600; }
+    @apply font-medium text-black underline underline-offset-4 decoration-2 decoration-blue-600; }
   .nav-link:hover {
     @apply bg-slate-100 py-3 rounded-3xl; }
 
